[[example]]
name = "ifop"
path = "examples/ifop.rs"

[package]
authors = ["Larmian"]
name = "ifop"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Larmian/ifop"
homepage = "https://github.com/Larmian/ifop"
documentation = "https://docs.rs/ifop/latest/ifop/"
categories = ["command-tool", "command-line-utilities", "file-operation", "com-interface"]
description = "A simple to use IFileOperation command tool"
keywords = ["ifop", "delete", "copy", "IFileOperation", "undo"]
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
windows-core = "0.52.0"
windows = { version = "0.52.0", features = ["Win32_System_Com", "Win32_UI_Shell_Common"]}